fixed spacing avatar - search - nav-bar

--- a/webapp/src/pages/Users/Users.css
+++ b/webapp/src/pages/Users/Users.css
@@ -36,7 +36,11 @@
     top: 0;
     padding-bottom: 10px;
     z-index:10;
+    justify-content: space-evenly;
     background: var(--color-background);
+  }
+  .fixed-frame > .avatar-search > .avatar-small {
+    margin-right: 50px;
   }
   .fixed-frame > .navigation-bar {
     margin-left: 30px;
